--- a/src/bankupdated/Frame2.fxml
+++ b/src/bankupdated/Frame2.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame2Controller">
    <children>
       <Label layoutX="78.0" layoutY="14.0" text="Reciever Information" textFill="WHITE">
          <font>
@@ -35,10 +35,6 @@
       <Label layoutX="92.0" layoutY="442.0" text="CPR Number :" textFill="WHITE" />
       <Label layoutX="92.0" layoutY="469.0" text="Giver Name :" textFill="WHITE" />
       <Label layoutX="92.0" layoutY="496.0" text="Address :" textFill="WHITE" />
-      <CheckBox layoutX="78.0" layoutY="599.0" mnemonicParsing="false" text="Suggest Danske Gave Plus" textFill="WHITE">
-         <font>
-            <Font name="System Bold" size="13.0" />
-         </font></CheckBox>
       <Label layoutX="230.0" layoutY="35.0" prefHeight="27.0" prefWidth="227.0" text="$labelText1" textFill="WHITE" />
       <Label layoutX="230.0" layoutY="62.0" prefHeight="27.0" prefWidth="227.0" text="$labelText2" textFill="WHITE" />
       <Label layoutX="230.0" layoutY="123.0" prefHeight="27.0" prefWidth="227.0" text="$labelText3" textFill="WHITE" />
@@ -51,8 +47,11 @@
       <Label layoutX="230.0" layoutY="463.0" prefHeight="27.0" prefWidth="227.0" text="$labelText10" textFill="WHITE" />
       <Label layoutX="231.0" layoutY="490.0" prefHeight="27.0" prefWidth="227.0" text="$labelText11" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="213.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
-      <JFXButton layoutX="344.0" layoutY="596.0" style="-fx-background-color: #28b463;" text="Continue" textFill="WHITE" />
+      <JFXButton fx:id="btn1" layoutX="345.0" layoutY="616.0" style="-fx-background-color: #28b463;" text="Continue" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="367.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="523.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
+      <JFXButton fx:id="suggestBtn" layoutX="72.0" layoutY="616.0" style="-fx-background-color: #28b463;" text="Suggest Danske Gave Plus" textFill="WHITE" />
+      <Label layoutX="47.0" layoutY="575.0" text="Selected Account :" textFill="WHITE" />
+      <Label fx:id="selectedAccount" layoutX="204.0" layoutY="575.0" prefHeight="27.0" prefWidth="181.0" textFill="WHITE" />
    </children>
 </AnchorPane>
