--- a/src/bankupdated/FXMLDocument.fxml
+++ b/src/bankupdated/FXMLDocument.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
 <?import javafx.scene.paint.*?>
 <?import com.jfoenix.controls.*?>
 <?import java.lang.*?>
@@ -8,10 +9,13 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="150.0" prefWidth="300.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="136.0" prefWidth="300.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.FXMLDocumentController">
     <children>
-        <Label fx:id="label" layoutX="126" layoutY="120" minHeight="16" minWidth="69" />
-      <Label layoutX="29.0" layoutY="59.0" prefHeight="27.0" prefWidth="141.0" text="Customer Request " textFill="WHITE" />
-      <JFXButton fx:id="jfbutton" buttonType="RAISED" layoutX="171.0" layoutY="60.0" onAction="#handleButtonAction" text="View Details" textFill="WHITE" />
+        <Label fx:id="label" layoutX="126.0" layoutY="102.0" minHeight="16" minWidth="69" textFill="WHITE" />
+      <Label layoutX="29.0" layoutY="26.0" prefHeight="27.0" prefWidth="241.0" text="Customer Request" textFill="WHITE">
+         <font>
+            <Font size="16.0" />
+         </font></Label>
+      <JFXButton fx:id="jfbutton" layoutX="100.0" layoutY="72.0" onAction="#handleButtonAction" style="-fx-background-color: #28b463;" text="View Details" textFill="WHITE" />
     </children>
 </AnchorPane>
