--- a/src/bankupdated/Frame3.fxml
+++ b/src/bankupdated/Frame3.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="350.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.FXMLDocumentController">
+<AnchorPane id="AnchorPane" prefHeight="350.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame3Controller">
    <children>
-      <JFXTextArea layoutX="14.0" layoutY="28.0" prefHeight="254.0" prefWidth="446.0" style="-fx-text-fill: white;" />
-      <JFXButton layoutX="266.0" layoutY="301.0" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: #3498db;" text="Send" textFill="WHITE" />
+      <JFXTextArea layoutX="14.0" layoutY="28.0" prefHeight="254.0" prefWidth="446.0" style="-fx-text-fill: white;" text="$message" />
+      <JFXButton fx:id="sendBtn" layoutX="266.0" layoutY="301.0" onAction="#handleSendButtonAction" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: #3498db;" text="Send" textFill="WHITE" />
    </children>
 </AnchorPane>
