--- a/src/bankupdated/Frame2.fxml
+++ b/src/bankupdated/Frame2.fxml
@@ -1,42 +1,58 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.text.*?>
+<?import com.jfoenix.controls.*?>
 <?import javafx.scene.control.*?>
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="477.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="65.0" layoutY="14.0" text="Reciever Information" />
-      <Label layoutX="92.0" layoutY="41.0" text="CPR Number :" />
-      <Label layoutX="92.0" layoutY="68.0" text="Name :" />
-      <Label layoutX="67.0" layoutY="102.0" text="Parent 1" />
-      <Label layoutX="93.0" layoutY="129.0" text="CPR Number :" />
-      <Label layoutX="92.0" layoutY="156.0" text="Name :" />
-      <Label layoutX="92.0" layoutY="183.0" text="Address :" />
-      <Label layoutX="78.0" layoutY="261.0" text="Parent 2" />
-      <Label layoutX="92.0" layoutY="288.0" text="CPR Number :" />
-      <Label layoutX="92.0" layoutY="315.0" text="Name :" />
-      <Label layoutX="92.0" layoutY="336.0" text="Address :" />
-      <Label layoutX="74.0" layoutY="415.0" text="Giver Information" />
-      <Label layoutX="88.0" layoutY="442.0" text="CPR Number :" />
-      <Label layoutX="93.0" layoutY="469.0" text="Giver Name :" />
-      <Label layoutX="92.0" layoutY="496.0" text="Address :" />
-      <CheckBox layoutX="67.0" layoutY="599.0" mnemonicParsing="false" text="Suggest Danske Gave Plus" />
-      <Button layoutX="346.0" layoutY="593.0" mnemonicParsing="false" text="Continue" />
-      <Button layoutX="67.0" layoutY="363.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="216.0" text="Retrieve Banking Details" />
-      <Button layoutX="67.0" layoutY="210.0" mnemonicParsing="false" prefHeight="33.0" prefWidth="216.0" text="Retrieve Banking Details" />
-      <Button layoutX="80.0" layoutY="523.0" mnemonicParsing="false" text="Retrieve Banking Details" />
-      <Label layoutX="230.0" layoutY="41.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="68.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="129.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="156.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="183.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="288.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="315.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="336.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="442.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="469.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
-      <Label layoutX="230.0" layoutY="496.0" prefHeight="27.0" prefWidth="227.0" text="Label" />
+      <Label layoutX="78.0" layoutY="14.0" text="Reciever Information" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label layoutX="92.0" layoutY="41.0" text="CPR Number :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="68.0" text="Name :" textFill="WHITE" />
+      <Label layoutX="78.0" layoutY="102.0" text="Parent 1" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label layoutX="92.0" layoutY="129.0" text="CPR Number :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="156.0" text="Name :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="183.0" text="Address :" textFill="WHITE" />
+      <Label layoutX="78.0" layoutY="261.0" text="Parent 2" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label layoutX="92.0" layoutY="288.0" text="CPR Number :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="315.0" text="Name :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="338.0" text="Address :" textFill="WHITE" />
+      <Label layoutX="78.0" layoutY="414.0" text="Giver Information" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></Label>
+      <Label layoutX="92.0" layoutY="442.0" text="CPR Number :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="469.0" text="Giver Name :" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="496.0" text="Address :" textFill="WHITE" />
+      <CheckBox layoutX="78.0" layoutY="599.0" mnemonicParsing="false" text="Suggest Danske Gave Plus" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="13.0" />
+         </font></CheckBox>
+      <Label layoutX="230.0" layoutY="35.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="62.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="123.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="150.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="177.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="282.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="309.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="332.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="436.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="230.0" layoutY="463.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <Label layoutX="231.0" layoutY="490.0" prefHeight="27.0" prefWidth="227.0" text="Label" textFill="WHITE" />
+      <JFXButton layoutX="78.0" layoutY="213.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
+      <JFXButton layoutX="344.0" layoutY="596.0" style="-fx-background-color: #28b463;" text="Continue" textFill="WHITE" />
+      <JFXButton layoutX="78.0" layoutY="367.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
+      <JFXButton layoutX="78.0" layoutY="523.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
    </children>
 </AnchorPane>
