--- a/src/bankupdated/Frame2.fxml
+++ b/src/bankupdated/Frame2.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="672.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame2Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="704.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame2Controller">
    <children>
       <Label layoutX="78.0" layoutY="14.0" text="Reciever Information" textFill="WHITE">
          <font>
@@ -47,11 +47,15 @@
       <Label layoutX="230.0" layoutY="463.0" prefHeight="27.0" prefWidth="227.0" text="$labelText10" textFill="WHITE" />
       <Label layoutX="230.0" layoutY="490.0" prefHeight="27.0" prefWidth="227.0" text="$labelText11" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="213.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
-      <JFXButton fx:id="continueBtn" layoutX="345.0" layoutY="616.0" onAction="#handleContinueButtonAction" prefHeight="27.0" style="-fx-background-color: #28b463;" text="Continue" textFill="WHITE" />
+      <JFXButton fx:id="continueBtn" layoutX="344.0" layoutY="651.0" onAction="#handleContinueButtonAction" prefHeight="27.0" style="-fx-background-color: #28b463;" text="Continue" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="367.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
       <JFXButton layoutX="78.0" layoutY="523.0" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #3498db;" text="Retrieve Banking Details" textFill="WHITE" />
-      <JFXButton fx:id="suggestBtn" layoutX="78.0" layoutY="616.0" onAction="#handleSuggestButtonAction" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #28b463;" text="Suggest Danske Gave Plus" textFill="WHITE" />
-      <Label layoutX="92.0" layoutY="575.0" text="Selected Account :" textFill="WHITE" />
-      <Label fx:id="selectedAccount" layoutX="230.0" layoutY="569.0" prefHeight="27.0" prefWidth="181.0" textFill="WHITE" />
+      <JFXButton fx:id="suggestBtn" layoutX="78.0" layoutY="651.0" onAction="#handleSuggestButtonAction" prefHeight="27.0" prefWidth="198.0" style="-fx-background-color: #28b463;" text="Suggest Danske Gave Plus" textFill="WHITE" />
+      <Label layoutX="92.0" layoutY="617.0" text="Selected Account :" textFill="WHITE" />
+      <Label fx:id="selectedAccount" layoutX="228.0" layoutY="610.0" prefHeight="27.0" prefWidth="181.0" textFill="WHITE" />
+      <Label fx:id="giverSignature" layoutX="91.0" layoutY="569.0" prefHeight="27.0" prefWidth="227.0" textFill="WHITE" />
+      <Label fx:id="p1Signature" layoutX="91.0" layoutY="590.0" prefHeight="27.0" prefWidth="227.0" textFill="WHITE" />
+      <Label fx:id="giverSignatureVal" layoutX="297.0" layoutY="569.0" prefHeight="27.0" prefWidth="110.0" text="Label" textFill="WHITE" />
+      <Label fx:id="p1SignatureVal" layoutX="297.0" layoutY="590.0" prefHeight="27.0" prefWidth="110.0" text="Label" textFill="WHITE" />
    </children>
 </AnchorPane>
