--- a/src/bankupdated/Frame3_n.fxml
+++ b/src/bankupdated/Frame3_n.fxml
@@ -12,7 +12,7 @@
 <AnchorPane id="AnchorPane" prefHeight="136.0" prefWidth="300.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.FXMLDocumentController">
     <children>
         <Label fx:id="label" layoutX="126.0" layoutY="102.0" minHeight="16" minWidth="69" textFill="WHITE" />
-      <Label layoutX="4.0" layoutY="47.0" prefHeight="27.0" prefWidth="292.0" text="Customer Selected Danske Gave Account" textFill="WHITE">
+      <Label layoutX="106.0" layoutY="55.0" prefHeight="27.0" prefWidth="109.0" text="This is Frame 3" textFill="WHITE">
          <font>
             <Font size="16.0" />
          </font></Label>
