--- a/src/bankupdated/Frame3b.fxml
+++ b/src/bankupdated/Frame3b.fxml
@@ -26,7 +26,7 @@
             <Font size="15.0" />
          </font>
       </Label>
-      <Label layoutX="174.0" layoutY="67.0" prefHeight="15.0" prefWidth="265.0" text="labal type" textFill="WHITE">
+      <Label layoutX="174.0" layoutY="67.0" prefHeight="15.0" prefWidth="265.0" text="$accountType" textFill="WHITE">
          <font>
             <Font size="14.0" />
          </font>
