--- a/src/bankupdated/FXMLDocument.fxml
+++ b/src/bankupdated/FXMLDocument.fxml
@@ -16,6 +16,6 @@
          <font>
             <Font size="16.0" />
          </font></Label>
-      <JFXButton fx:id="jfxButton" layoutX="100.0" layoutY="72.0" onAction="#handleButtonAction" style="-fx-background-color: #28b463;" text="View Details" textFill="WHITE" />
+      <JFXButton fx:id="jfxButton" layoutX="100.0" layoutY="72.0" onAction="#handleButtonAction" prefHeight="27.0" style="-fx-background-color: #28b463;" text="View Details" textFill="WHITE" />
     </children>
 </AnchorPane>
