--- a/src/bankupdated/Frame3.fxml
+++ b/src/bankupdated/Frame3.fxml
@@ -9,9 +9,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane id="AnchorPane" prefHeight="350.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame3Controller">
+<AnchorPane id="AnchorPane" prefHeight="197.0" prefWidth="477.0" style="-fx-background-color: #003755;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="bankupdated.Frame3Controller">
    <children>
-      <JFXTextArea layoutX="14.0" layoutY="28.0" prefHeight="254.0" prefWidth="446.0" style="-fx-text-fill: white;" text="$message" />
-      <JFXButton fx:id="sendBtn" layoutX="266.0" layoutY="301.0" onAction="#handleSendButtonAction" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: #3498db;" text="Send" textFill="WHITE" />
+      <JFXTextArea focusColor="WHITE" layoutX="41.0" layoutY="41.0" prefHeight="100.0" prefWidth="422.0" style="-fx-background-color: white;" text="$message" />
+      <JFXButton fx:id="sendBtn" layoutX="301.0" layoutY="150.0" onAction="#handleSendButtonAction" prefHeight="25.0" prefWidth="162.0" style="-fx-background-color: #3498db;" text="Send" textFill="WHITE" />
+      <Label layoutX="41.0" layoutY="14.0" prefHeight="27.0" prefWidth="196.0" text="Enter the message :" textFill="WHITE" />
    </children>
 </AnchorPane>
